# 3DCompulsoryFinal

./: .gitignore  3DCompulsoryFinal.cpp  3DCompulsoryFinal.h  CMakeLists.txt
assets/models/: Horse.fbx  HorseNPC.fbx
assets/models/barn/: GrassField.fbx  barn.fbx  barn.mtl  barnDoor.fbx  barnHay.fbx
core/Interfaces/: CollisionInterface.h  ControllerInterface.h  RenderInterface.h
core/Mathematics/: BarycentricC.h  ParametricCurve.h
core/actors/: Actor.cpp  Actor.h  ActorController.cpp  ActorController.h  MeshActor.cpp  MeshActor.h  PawnActor.cpp  PawnActor.h  Scene.cpp  Scene.h  SceneGraph.h  StaticMesh.h  StaticMeshActor.cpp  StaticMeshActor.h
core/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
core/graphics/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Vertex.h
core/lighting/: DirectionalLight.h  PointLight.h
core/physics/: AABBcollision.h
core/program/: Application.cpp  Application.h  Window.cpp  Window.h
core/shaders/: Shader.cpp  Shader.h  shader.fs  shader.vs
core/utility/: AssimpLoader.cpp  AssimpLoader.h  AssimpUtility.h  Shared.h  Transform.h
includes/glad/: glad.h
